--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,18 @@
 h1 {
+  font-family: 'Roboto', sans-serif;
   color: #000;
   margin-left: 20px;
   margin-right: 10px;
   margin-bottom: 30px;
   margin-top: 40px;
+  display: inline-block;
 }
 
 h2 {
   color: #FF9900;
   width: 75%;
   height: 1em;
+  max-width: 100%;
 }
 
 h3 {
@@ -19,6 +22,7 @@ h3 {
   border-style: solid;
   border-width: 30px 30px 30px 30px;
   border-radius: 10px 10px;
+  min-width: 10%;
 }
 
 p {
@@ -26,7 +30,7 @@ p {
   margin: 3rem 0 0 -3rem;
 }
 
-label {
+#numbe {
   color: rgba(56, 155, 66, 1);
   padding-top: 25pt;
   padding-left: 50pt;
@@ -34,7 +38,17 @@ label {
   padding-top: 25pt;
 }
 
-legend {
+#body-select {
   color: hsl(10, 50%, 50%, 80%);
   padding: 1in .5in .5in 1in;
+}
+
+#phone {
+  text-decoration: underline;
+  text-decoration-color: yellow;
+  text-align: center;
+}
+
+div{
+  display: block;
 }
