--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ h1 {
   margin-bottom: 30px;
   margin-top: 40px;
   display: inline-block;
+  position: absolute;
 }
 
 h2 {
@@ -51,4 +52,46 @@ p {
 
 div{
   display: block;
+}
+
+.form-example {
+  position: relative;
+}
+
+.flex-container {
+  display: flex;
+  
+  flex-flow: row wrap;
+  
+  justify-content: space-around;
+  
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.flex-item {
+  background: tomato;
+  padding: 5px;
+  width: 200px;
+  height: 150px;
+  margin-top: 10px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+
+.grid {
+  display: grid;
+  grid-gap: 10px;
+  grid-auto-flow: column;
+  grid-template-columns: 100px;
+}
+
+@media (max-width: 786px) {
+  html {
+    font-size: 16px 
+  }
 }
