--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ div{
 
 .grid {
   display: grid;
+  background-color: linen;
   grid-gap: 10px;
   grid-auto-flow: column;
   grid-template-columns: 100px;
